test/parser/error/err_13_assign_undefined.pl0
program p; 
begin 
x := 1 
end